--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<title>科技头条</title>
 		<link href="css/mui.min.css" rel="stylesheet" />
+		<style>
+			body{
+				background-color: #ffffff;
+			}
+		</style>
 	</head>
-
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		<header class="mui-bar mui-bar-nav mui-bar-transparent">
+			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 			<h1 id="title" class="mui-title">首页</h1>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
@@ -42,7 +48,6 @@
 			};
 
 			var aniShow = {};
-
 			//创建子页面，首个选项卡页面显示，其它均隐藏；
 			document.addEventListener('plusready', onPlusReady, false);
 			
@@ -58,8 +63,6 @@
 					defaultTab.classList.add('mui-active');
 				}
 			});
-			
-			
 			function onPlusReady(){
 				var self = plus.webview.currentWebview();			
 				for(var i = 0; i < 4; i++) {
