--- a/html/card/index.html
+++ b/html/card/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
-		<meta charset="UTF-8">
-		<title>九大名片</title>
+		<meta charset="utf-8">
+		<title>Hello MUI</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="stylesheet" href="../../css/mui.min.css" />
+
+		<link rel="stylesheet" href="../../css/mui.min.css">
 		<style>
 			html,
 			body {
 				background-color: #efeff4;
 			}
+			
 			.mui-bar~.mui-content .mui-fullscreen {
 				top: 44px;
 				height: auto;
-				bottom: 44px;
 			}
 			
 			.mui-pull-top-tips {
@@ -94,95 +96,128 @@
 			}
 		</style>
 	</head>
+
 	<body>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
-			<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-				<div class="mui-scroll">
-					<a class="mui-control-item mui-active" href="#item1mobile" data-wid="pullrefresh_sub.html">
-						推荐
-					</a>
-					<a class="mui-control-item" href="#item2mobile" data-wid="pullrefresh_sub2.html">
-						热点
-					</a>
-					<a class="mui-control-item" href="#item3mobile" data-wid="pullrefresh_sub3.html">
-						北京
-					</a>
-					<a class="mui-control-item" href="#item4mobile" data-wid="pullrefresh_sub4.html">
-						社会
-					</a>
-					<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub5.html">
-						娱乐
-					</a>
-					<a class="mui-control-item" href="#item6mobile" data-wid="pullrefresh_sub2.html">
-						热点
-					</a>
-					<a class="mui-control-item" href="#item7mobile" data-wid="pullrefresh_sub3.html">
-						北京
-					</a>
-					<a class="mui-control-item" href="#item8mobile" data-wid="pullrefresh_sub4.html">
-						社会
-					</a>
-					<a class="mui-control-item" href="#item9mobile" data-wid="pullrefresh_sub5.html">
-						娱乐
-					</a>
-					<!--<a class="mui-control-item" href="#item6mobile" data-wid="tab-top-subpage-6.html">
-						科技
-					</a>-->
+				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div class="mui-scroll">
+						<a class="mui-control-item mui-active" href="#item1mobile" data-wid="pullrefresh_sub.html">
+							推荐
+						</a>
+						<a class="mui-control-item" href="#item2mobile" data-wid="pullrefresh_sub.html">
+							电子信息
+						</a>
+						<a class="mui-control-item" href="#item3mobile" data-wid="pullrefresh_sub.html">
+							航天航空
+						</a>
+						<a class="mui-control-item" href="#item4mobile" data-wid="pullrefresh_sub.html">
+							生物制药
+						</a>
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+							新能源
+						</a>
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+							现代互联网技术
+						</a>
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+							数字娱乐
+						</a>
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+							高端装备制造
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
-		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/webviewGroup.js" type="text/javascript" charset="utf-8"></script>
 		<script>
-			mui.init({
-				gestureConfig:{
-					doubletap:true
-				},
-				subpages:[{ 
-					url:'pullrefresh_sub.html',
-					id:'pullrefresh_sub.html',
-					styles:{
-						top: '45px',
-						bottom: '0px', 
+			mui.init();
+			
+			mui.plusReady(function() {
+				var group = new webviewGroup("pullrefresh_sub.html", {
+					items: [
+					{
+						id: "pullrefresh_sub.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0"
+						},
+						extras: {}
+					}, {
+						id: "pullrefresh_sub2.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0px"
+						},
+						extras: {}
+					}, {
+						id: "pullrefresh_sub3.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0px"
+						},
+						extras: {}
+					}, {
+						id: "pullrefresh_sub4.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0px"
+						},
+						extras: {}
+					}, {
+						id: "pullrefresh_sub5.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0px"
+						},
+						extras: {}
+					}, {
+						id: "pullrefresh_sub6.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0px"
+						},
+						extras: {}
+					}, {
+						id: "pullrefresh_sub7.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0px"
+						},
+						extras: {}
+					}, {
+						id: "pullrefresh_sub8.html",
+						url: "pullrefresh_sub.html",
+						styles:{
+							top:"38px",
+							bottom:"0px"
+						},
+						extras: {}
+					}],
+					onChange: function(obj) {
+						var c = document.querySelector(".mui-control-item.mui-active");
+						if(c) {
+							c.classList.remove("mui-active");
+						}
+						document.querySelector(".mui-scroll .mui-control-item:nth-child(" + (parseInt(obj.index) + 1) + ")").classList.add("mui-active");
 					}
-				},{ 
-					url:'pullrefresh_sub2.html',
-					id:'pullrefresh_sub2.html',
-					styles:{
-						top: '45px',
-						bottom: '0px', 
-					}
-				},{ 
-					url:'pullrefresh_sub3.html',
-					id:'pullrefresh_sub3.html',
-					styles:{
-						top: '45px',
-						bottom: '0px', 
-					}
-				},{ 
-					url:'pullrefresh_sub4.html',
-					id:'pullrefresh_sub4.html',
-					styles:{
-						top: '45px',
-						bottom: '0px', 
-					}
-				},{ 
-					url:'pullrefresh_sub5.html',
-					id:'pullrefresh_sub5.html',
-					styles:{
-						top: '45px',
-						bottom: '0px', 
-					}
-				}] 
-		});
-		var contentWebview = null;
-		document.querySelector('header').addEventListener('doubletap',function () {
-			if(contentWebview==null){
-				contentWebview = plus.webview.currentWebview().children()[0];
-			}
-			contentWebview.evalJS("mui('#pullrefresh').pullRefresh().scrollTo(0,0,100)");
-		});
+				});
+				mui(".mui-scroll").on("tap", ".mui-control-item", function(e) {
+					var wid = this.getAttribute("data-wid");
+					group.switchTab(wid);
+				});
+
+			});
 		</script>
 	</body>
+
 </html>
