--- a/html/card/pullrefresh_sub.html
+++ b/html/card/pullrefresh_sub.html
@@ -8,6 +8,11 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
+		<style type="text/css">
+			.mui-content.mui-scroll-wrapper{
+				background-color:#ffffff;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -70,10 +75,7 @@
 			}
 			if (mui.os.plus) {
 				mui.plusReady(function() {
-					setTimeout(function() {
-						mui('#pullrefresh').pullRefresh().pullupLoading();
-					}, 1000);
-
+					mui('#pullrefresh').pullRefresh().pullupLoading();
 				});
 			} else {
 				mui.ready(function() {
