换了个图片

--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -117,35 +117,35 @@
 							title: '特朗普郭台铭同台宣布：富士康将在美投资百亿设厂 特朗普郭台铭同台宣布：富士康将在美投资百亿设厂',
 							publishDateTime: '20分钟前',
 							source: '科技头条',
-							src: '../../images/temp.jpeg',
+							src: '../../images/temp.jpg',
 							guid: 'article'
 						},
 						{
 							title: '特朗普郭台铭同台宣布',
 							publishDateTime: '20分钟前',
 							source: '科技头条',
-							src: '../../images/temp.jpeg',
+							src: '../../images/temp.jpg',
 							guid: 'article'
 						},
 						{
 							title: '特朗普郭台铭同台宣布：富士康将在美投资百亿',
 							publishDateTime: '20分钟前',
 							source: '科技头条',
-							src: '../../images/temp.jpeg',
+							src: '../../images/temp.jpg',
 							guid: 'article'
 						},
 						{
 							title: '特朗普郭台铭同台宣布：富士康将在美投资百亿设厂 特朗普郭台铭同台宣布：富士康将在美投资百亿设厂',
 							publishDateTime: '20分钟前',
 							source: '科技头条',
-							src: '../../images/temp.jpeg',
+							src: '../../images/temp.jpg',
 							guid: 'article'
 						},
 						{
 							title: '特朗普郭台铭同台宣布：富士康将在美投资百亿设厂 特朗普郭台铭同台宣布：富士康将在美投资百亿设厂',
 							publishDateTime: '20分钟前',
 							source: '科技头条',
-							src: '../../images/temp.jpeg',
+							src: '../../images/temp.jpg',
 							guid: 'article'
 						}
 					] //列表信息流数据
@@ -165,7 +165,7 @@
 						var li = document.createElement('li');
 						li.className = 'mui-table-view-cell mui-media';
 						li.innerHTML = '<a javascript:;>' 
-											+'<img class="mui-media-object mui-pull-right" src="../../images/temp.jpeg">' 
+											+'<img class="mui-media-object mui-pull-right" src="../../images/temp.jpg">' 
 											+'<div class="mui-media-body">' 
 												+'<div class="article-title">我是自动加载出来的内容' + (i+1) + '</div>' 
 												+'<p class="mui-ellipsis">科技头条 &nbsp;&nbsp; 20分钟前</p>' 
@@ -183,7 +183,7 @@
 					var li = document.createElement('li');
 					li.className = 'mui-table-view-cell mui-media';
 						li.innerHTML = '<a javascript:;>' 
-											+'<img class="mui-media-object mui-pull-right" src="../../images/temp.jpeg">'
+											+'<img class="mui-media-object mui-pull-right" src="../../images/temp.jpg">'
 											+'<div class="mui-media-body">' 
 												+'<div class="article-title">我是下拉刷新的内容' + (i+1) + '</div>'
 												+'<p class="mui-ellipsis">科技头条 &nbsp;&nbsp; 20分钟前</p>' 
