--- a/html/card/index.html
+++ b/html/card/index.html
@@ -102,28 +102,28 @@
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div class="mui-scroll">
-						<a class="mui-control-item mui-active" href="#item1mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item mui-active" href="#item1mobile" data-wid="../public/articleList.html">
 							推荐
 						</a>
-						<a class="mui-control-item" href="#item2mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item" href="#item2mobile" data-wid="../public/articleList.html">
 							电子信息
 						</a>
-						<a class="mui-control-item" href="#item3mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item" href="#item3mobile" data-wid="../public/articleList.html">
 							航天航空
 						</a>
-						<a class="mui-control-item" href="#item4mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item" href="#item4mobile" data-wid="../public/articleList.html">
 							生物制药
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
 							新能源
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
 							现代互联网技术
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
 							数字娱乐
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
 							高端装备制造
 						</a>
 					</div>
@@ -136,11 +136,11 @@
 			mui.init();
 			
 			mui.plusReady(function() {
-				var group = new webviewGroup("pullrefresh_sub.html", {
+				var group = new webviewGroup("articleList.html", {
 					items: [
 					{
 						id: "pullrefresh_sub.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0"
@@ -148,7 +148,7 @@
 						extras: {}
 					}, {
 						id: "pullrefresh_sub2.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0px"
@@ -156,7 +156,7 @@
 						extras: {}
 					}, {
 						id: "pullrefresh_sub3.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0px"
@@ -164,7 +164,7 @@
 						extras: {}
 					}, {
 						id: "pullrefresh_sub4.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0px"
@@ -172,7 +172,7 @@
 						extras: {}
 					}, {
 						id: "pullrefresh_sub5.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0px"
@@ -180,7 +180,7 @@
 						extras: {}
 					}, {
 						id: "pullrefresh_sub6.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0px"
@@ -188,7 +188,7 @@
 						extras: {}
 					}, {
 						id: "pullrefresh_sub7.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0px"
@@ -196,7 +196,7 @@
 						extras: {}
 					}, {
 						id: "pullrefresh_sub8.html",
-						url: "pullrefresh_sub.html",
+						url: "../public/articleList.html",
 						styles:{
 							top:"38px",
 							bottom:"0px"
