--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -152,7 +152,7 @@
 			 * @param {String} guid 
 			 */
 			function open_detail(guid) {
-				let showPage = '';
+				var showPage = '';
 				
 				//触发子窗口变更新闻详情
 				if(guid.indexOf('message') >= 0){
