详情页头颜色

--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -79,9 +79,9 @@
 
 			var requestUrl = '', webview_detail = null;
 			var	titleNView = { //详情页原生导航配置
-				backgroundColor: '#f7f7f7', //导航栏背景色
+				backgroundColor: '#3385ff', //导航栏背景色
 				titleText: '', //导航栏标题
-				titleColor: '#000000', //文字颜色
+				titleColor: '#fff', //文字颜色
 				type: 'transparent', //透明渐变样式
 				autoBackButton: true, //自动绘制返回箭头
 				splitLine: { //底部分割线
@@ -98,8 +98,7 @@
 						"render": "always",
 						"popGesture": "hide",
 						"bounce": "vertical",
-						"bounceBackground": "#efeff4",
-						"titleNView": titleNView
+						"bounceBackground": "#3385ff"
 					}
 				});
 				
