--- a/html/card/pullrefresh_sub.html
+++ b/html/card/pullrefresh_sub.html
@@ -19,6 +19,26 @@
 		<!--下拉刷新容器-->
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
+				<div id="slider" class="mui-slider">
+					<div class="mui-slider-group">
+						<!-- 第一张 -->
+						<div class="mui-slider-item">
+							<a href="#">
+								<img src="../../images/ad.png">
+							</a>
+						</div>
+						<!-- 第二张 -->
+						<div class="mui-slider-item">
+							<a href="#">
+								<img src="../../images/temp.jpg">
+							</a>
+						</div>
+					</div>
+					<div class="mui-slider-indicator">
+						<div class="mui-indicator mui-active"></div>
+						<div class="mui-indicator"></div>
+					</div>
+				</div>
 				<!--数据列表-->
 				<ul class="mui-table-view mui-table-view-chevron">
 					
