--- a/html/scientistStory/index.html
+++ b/html/scientistStory/index.html
@@ -1,9 +1,187 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
-		<meta charset="UTF-8">
-		<title></title>
+		<meta charset="utf-8">
+		<title>科研故事</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<link rel="stylesheet" href="../../css/mui.min.css">
+		<style type="text/css">
+			.mui-content.mui-scroll-wrapper{
+				background-color:#ffffff;
+			}
+			.mui-media .mui-media-body{
+				font-size: 13px;
+				color:#333333;
+			}
+			.mui-media .mui-media-body .mui-ellipsis{
+				font-size:11px;
+				color:#999999;
+			}
+			.mui-media .mui-media-footer{
+				overflow: hidden;
+				padding-top: 10px;
+			}
+			.text-gray{
+				color:#666666;
+			}
+			.mui-media-footer .text-gray{
+				font-size: 13px;
+			}
+			.mui-media-footer>img,
+			.mui-media-footer>video{
+				width: 100%;
+			}
+			video {
+            object-position: 0px 0px;
+            width: 100%;
+        }
+
+        .videoBox {
+            position: relative;
+            width: 100%;
+            height:180px;
+        }
+
+        .playBtn {
+        		width: 36px;
+        		height:36px;
+            position: absolute !important;
+            left: 50%;
+            top: 50%;
+            margin-left: -18px;
+            margin-top: -18px;
+            display: block;
+            border: none;
+            z-index: 1000;
+        }
+        .poster {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height:100%;
+            z-index: 1;
+        }
+		</style>
 	</head>
+
 	<body>
+		<!--下拉刷新容器-->
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<!--数据列表-->
+				<ul class="mui-table-view">
+					
+				</ul>
+			</div>
+		</div> 
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../vendor/jQuery/jquery.js"></script>
+		<script>
+			mui.init({
+				pullRefresh: {
+					container: '#pullrefresh',
+					down: {
+						callback: pulldownRefresh
+					},
+					up: {
+						contentrefresh: '正在加载...',
+						callback: pullupRefresh
+					}
+				}
+			});
+			/**
+			 * 下拉刷新具体业务实现
+			 */
+			function pulldownRefresh() {
+				setTimeout(function() {
+					var table = document.body.querySelector('.mui-table-view');
+					var cells = document.body.querySelectorAll('.mui-table-view-cell');
+					for (var i = cells.length, len = i + 3; i < len; i++) {
+						var li = document.createElement('li');
+						li.className = 'mui-table-view-cell mui-media';
+						var _card='';
+						_card+='<a href="javascript:;">';
+						_card+='<img class="mui-media-object mui-pull-left" src="../../images/head-temp.png">';
+						_card+='<div class="mui-media-body">';
+						_card+='卖女孩的小火柴';
+						_card+='<p class="mui-ellipsis">20分钟前</p>';
+						_card+='</div>';
+						_card+='<div class="mui-media-footer">';
+						_card+='<p class="text-gray mui-ellipsis-2">国务院总理李克强在人民大会堂三楼金色大厅会见采访十二届全国人大四次会议的中外记者，并回答记者提出的问题</p>';
+						_card+='</div>';
+						_card+='<div class="mui-media-footer">';
+						_card+='<img src="../../images/ad.png" />';
+						_card+='</div>';
+						_card+='</a>';
+						li.innerHTML = _card;
+						//下拉刷新，新纪录插到最前面；
+						table.insertBefore(li, table.firstChild);
+					}
+					mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
+				}, 1500);
+			}
+			var count = 0;
+			/**
+			 * 上拉加载具体业务实现
+			 */
+			function pullupRefresh() {
+				setTimeout(function() {
+					mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 2)); //参数为true代表没有更多数据了。
+					var table = document.body.querySelector('.mui-table-view');
+					var cells = document.body.querySelectorAll('.mui-table-view-cell');
+					for (var i = cells.length, len = i + 20; i < len; i++) {
+						var li = document.createElement('li');
+						li.className = 'mui-table-view-cell mui-media';
+						var _card='';
+						_card+='<a href="javascript:;">';
+						_card+='<img class="mui-media-object mui-pull-left" src="../../images/head-temp.png">';
+						_card+='<div class="mui-media-body">';
+						_card+='卖女孩的小火柴';
+						_card+='<p class="mui-ellipsis">20分钟前</p>';
+						_card+='</div>';
+						_card+='<div class="mui-media-footer">';
+						_card+='<p class="text-gray mui-ellipsis-2">国务院总理李克强在人民大会堂三楼金色大厅会见采访十二届全国人大四次会议的中外记者，并回答记者提出的问题</p>';
+						_card+='</div>';
+						_card+='<div class="mui-media-footer">';
+						if(i!=0){
+							_card+='<img src="../../images/ad.png" />';
+						}else{
+							_card+='<div class="videoBox">';
+						    _card+='<img class="playBtn" src="../../images/playBtn.png" />';
+						    _card+='<img class="poster" src="../../images/ad.png" alt="" />';
+						    _card+='<video class="videoLive" controls="controls" style="object-fit:fill" preload="auto" poster="../../images/ad.png" x5-video-player-type="h5" x5-video-player-fullscreen="true" webkit-playsinline="true" x-webkit-airplay="allow" playsinline="true">';
+					        _card+='<source type="video/mp4" src="../../images/mda-hg1dpy13qt8cdqhn.mp4" />';
+						    _card+='</video>';
+							_card+='</div>';
+						}
+						_card+='</div>';
+						_card+='</a>';
+						li.innerHTML = _card;
+						table.appendChild(li);
+					}
+				}, 1500);
+			}
+			if (mui.os.plus) {
+				mui.plusReady(function() {
+					mui('#pullrefresh').pullRefresh().pullupLoading();
+				});
+			} else {
+				mui.ready(function() {
+					mui('#pullrefresh').pullRefresh().pullupLoading();
+				});
+			}
+			$(document).on("tap",".playBtn",function(e){
+				e.preventDefault();
+				$(this).addClass("mui-hidden").next(".poster").addClass("mui-hidden");
+				$(this).parent().find("video").height($(this).parent().height());
+				$(this).parent().find("video")[0].play();
+				console.log($(this).parent().find("video")[0].src);
+			});
+		</script>
 	</body>
+
 </html>
