--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -55,8 +55,12 @@
 						<div class="img-box mui-pull-left">
 							<img class="userImg">
 						</div>
-						<div class="mui-media-body">
+						<div class="mui-media-body" style="display: none;">
 							登录科技头条 体验更多功能
+						</div>
+						<div class="mui-media-body userNameBox">
+							<p class="userName">卖火柴的小女孩</p>
+							<p class="info">这家伙很懒，什么都么留下</p>
 						</div>
 					</a>
 				</li>
